src/test/deca/context/invalid/classextends9.deca
class B{}

class A{}

class A extends B{}

